--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub username
-repo: upptime # Your Github repository name
+owner: pikokr # Your GitHub username
+repo: status-page # Your Github repository name
 
 # Add your sites here
 sites:
