--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,7 +5,7 @@ repo: status-page # Your Github repository name
 # Add your sites here
 sites:
   - name: UniqueBots API
-    url: https://api.uniquebots.kr/graphql
+    url: https://api.uniquebots.kr
   - name: UniqueBots FrontEnd
     url: https://uniquebots.kr
 
